# provenance-aware-rag

./: .gitignore  README.md  app.py  main.py  pyproject.toml  verify.py
data/: attestation_log.jsonl  roots.json
data/keys/: publisher.vk  service.vk
docs/: SPRINT.md  THREAT_MODEL.md  presentation.html
scripts/: generate_keys.py
src/: attestation.py  config.py  crypto.py  generate.py  ingest.py  intoto.py  merkle.py  retrieve.py  schema.py  store.py  verifier.py
