[project]
name = "provenance-aware-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "chromadb>=1.5.9",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.44.0",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.58.0",
    "torchvision>=0.27.1",
]

[project.optional-dependencies]
# Genuine in-toto Attestation Framework (ITE-6) export/verification (see
# src/intoto.py). Not needed for the rest of the app. Install with
# `uv sync --extra intoto`.
#   in-toto-attestation  Statement/ResourceDescriptor (protobuf) classes
#   securesystemslib[crypto]  DSSE Envelope + key/signer objects (the
#                              [crypto] extra pulls in `cryptography`,
#                              needed directly for Ed25519PrivateKey)
intoto = [
    "in-toto-attestation>=0.9.3",
    "securesystemslib[crypto]>=1.4.0",
]
